Closed
Bug 1235411
Opened 10 years ago
Closed 10 years ago
IsCallerChrome crash in HTMLMediaElement::Observe
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla46
People
(Reporter: bholley, Assigned: bholley)
References
Details
Attachments
(1 file)
|
965 bytes,
patch
|
khuey
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
See https://crash-stats.mozilla.com/report/index/9bde1061-c782-4605-84e6-319812151224 and similar.
I think we can just remove that check now that we have WebIDL.
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8702321 -
Flags: review?(bugs)
| Assignee | ||
Comment 2•10 years ago
|
||
This was added in bug 605264, FWIW.
| Assignee | ||
Comment 3•10 years ago
|
||
Comment on attachment 8702321 [details] [diff] [review]
Remove IsCallerChrome check in HTMLMediaElement::Observe. v1
Approval Request Comment
[Feature/regressing bug #]: bug 1072150
[User impact if declined]: Crashes on Aurora/Nightly, misleading telemetry on Beta.
[Describe test coverage new/current, TreeHerder]: None.
[Risks and why]: Basically no risk - just removing an unnecessary early-return.
[String/UUID change made/needed]: None
Attachment #8702321 -
Flags: approval-mozilla-beta?
Attachment #8702321 -
Flags: approval-mozilla-aurora?
Attachment #8702321 -
Flags: review?(bugs) → review+
Comment 5•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Updated•10 years ago
|
status-firefox44:
--- → affected
status-firefox45:
--- → affected
Comment 6•10 years ago
|
||
Comment on attachment 8702321 [details] [diff] [review]
Remove IsCallerChrome check in HTMLMediaElement::Observe. v1
Fix a crash, taking it.
Attachment #8702321 -
Flags: approval-mozilla-beta?
Attachment #8702321 -
Flags: approval-mozilla-beta+
Attachment #8702321 -
Flags: approval-mozilla-aurora?
Attachment #8702321 -
Flags: approval-mozilla-aurora+
Comment 7•10 years ago
|
||
| bugherder uplift | ||
Comment 8•10 years ago
|
||
| bugherder uplift | ||
Comment 9•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•