Bug 1235411 - Remove IsCallerChrome check in HTMLMediaElement::Observe. r=khuey, a=sylvestre